# rust-micro-front-end

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  compose.yml  justfile  rustfmt.toml  test_jwt_middleware.sh  test_mysql_integration.sh
.github/: copilot-instructions.md
docs/: PROJECT_COMPLETION.md  REQUIREMENTS.md  WORK_PLAN.md  implementation_summary.md
docs/api/: README.md
docs/architecture/: cross_app_integration.md  implementation_guide.md
docs/deployment/: container_security.md  environment_validation.md  production.md  secrets_management.md
docs/operations/: backup_recovery.md  log_aggregation.md  metrics_standardization.md  monitoring_runbooks.md
docs/performance/: tuning_guide.md
docs/troubleshooting/: README.md
examples/: integration_demo.html
migrations/: 001_create_users_table.sql
nginx/conf/: default.conf
nginx/www/: 404.html  50x.html  robots.txt  sitemap.xml
scripts/: check_jwt.sh  generate_jwt_keys.sh  generate_ssl_cert.sh  jwt_test_helper.sh  run_component_tests.sh  run_tests_sequentially.sh  update_jwt_env.sh
scripts/backup/: config_backup.sh  db_full_backup.sh  db_transaction_backup.sh  image_backup.sh
scripts/recovery/: config_recovery.sh  db_full_recovery.sh  db_point_in_time_recovery.sh  image_recovery.sh
scripts/validation/: backup_validation.sh
src/: config.rs  env_validation.rs  errors.rs  logging.rs  main.rs  metrics.rs  router.rs  template.rs  validation.rs
src/config/: database.rs  mod.rs
src/database/: cache.rs  mock.rs  mod.rs  mysql.rs  seeding.rs
src/handlers/: get_api_username.rs  get_debug_headers.rs  get_debug_set_token.rs  get_debug_validate_token.rs  get_display.rs  get_edit.rs  get_health.rs  get_seed_status.rs  get_static.rs  health.rs  mod.rs  post_api_username.rs  update_username.rs  username.rs
src/middleware/: jwt_auth.rs  mod.rs  rate_limiting.rs  security.rs
src/tests/: benchmark_tests.rs  database_tests.rs  errors_tests.rs  handler_tests.rs  jwt_e2e_tests.rs  logging_tests.rs  metrics_tests.rs  middleware_tests.rs  mod.rs  router_tests.rs  template_tests.rs  validation_tests.rs
src/web_components/: display-component.js  edit-component.js  event-bus.js  index.js
templates/: base.html  display.html  edit.html
tests/: README.md
tests/component/: README.md  component_integration_test.js  display_component_test.js  edit_component_test.js
tests/composability/: validate_composability.sh
tests/integration/: jwt_cookie_expiry_test.sh  jwt_cookie_test.sh  jwt_test.sh  mysql_integration_test.sh  simple_mysql_test.sh  test_utils.sh
